# lumiere-os

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-iso.yml  lint.yml  release.yml
apps/lumiere-cheatsheet/: cheatsheet.py  lumiere-cheatsheet  lumiere-cheatsheet.desktop
apps/lumiere-monitor/: lumiere-monitor  lumiere-monitor.desktop  monitor.py
apps/lumiere-pkg/: README.md  lumiere-pkg
apps/lumiere-settings/: lumiere-settings  lumiere-settings.desktop  settings.py
apps/lumiere-snapshot/: 90-lumiere-snapshot.hook  lumiere-snapshot  lumiere-snapshot.desktop  snapshot-manager.py
apps/lumiere-store/: lumiere-store  lumiere-store.desktop  store.py
apps/lumiere-update/: lumiere-update  lumiere-update.service  lumiere-update.timer
apps/lumiere-welcome/: lumiere-welcome  lumiere-welcome.desktop  welcome.py
branding/fastfetch/: config.jsonc
branding/plymouth/: lumiere.plymouth  lumiere.script
compositor/: lumiere.conf.example  meson.build
compositor/src/: config.c  input.c  ipc.c  main.c  render.c  server.c  server.h
desktop/: mimeapps.list
desktop/hyprland/: hyprland.conf
desktop/mako/: config
desktop/rofi/: config.rasi  lumiere.rasi  power-menu.sh
desktop/scripts/: osd.sh  screenshot.sh  theme-switcher.sh  wallpaper-picker.sh
desktop/swaylock/: config
desktop/waybar/: config.jsonc  style.css
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOMIZATION.md  FAQ.md  ROADMAP.md  SHORTCUTS.md  USER_GUIDE.md
docs/wiki/: Development.md  Getting-Started.md  Home.md  Troubleshooting.md
installer/: install.sh
installer/lumiere-installer/: installer.py  lumiere-installer  lumiere-installer.desktop
iso/: build.sh  packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/root/: customize_airootfs.sh
iso/efiboot/loader/: loader.conf
iso/efiboot/loader/entries/: 01-archiso-x86_64-linux.conf
lumiere-term/: Cargo.toml  lumiere-term.toml
lumiere-term/src/: config.rs  main.rs  pty.rs  renderer.rs  terminal.rs
lumiere-term/src/shaders/: text.wgsl
scripts/: lumiere-hw-detect.sh  setup-dev.sh  test-vm.sh
terminal/kitty/: kitty.conf
terminal/starship/: starship.toml
terminal/zsh/: .zshenv  .zshrc
theme/colors/: lumiere-dark.json  lumiere-light.json
theme/cursors/: build-cursors.sh
theme/cursors/Lumiere-Cursors/: cursor.theme  index.theme
theme/gtk-3.0/: gtk.css
theme/gtk-4.0/: gtk-light.css  gtk.css
theme/icons/lumiere-icons/: index.theme
