[package]
name = "lumiere-term"
version = "0.3.0"
edition = "2021"
authors = ["Lumière OS Team"]
description = "✦ Lumière Terminal — GPU-hızlandırmalı Wayland-native terminal emülatörü"
license = "MIT"

[dependencies]
# GPU rendering
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }

# Pencere + Wayland
winit = { version = "0.29", features = ["wayland"] }
raw-window-handle = "0.5"

# Metin rendering
cosmic-text = "0.11"

# Terminal emülasyonu
vte = "0.13"

# PTY
rustix = { version = "0.38", features = ["pty", "process", "termios"] }
polling = "3.3"

# Konfigürasyon
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
